# Launcher

./: .editorconfig  .gitignore  README.md  build.gradle  build.gradle.kts  checkstyle.xml  flake.nix  gradle.properties  pom.xml  settings.gradle  settings.gradle.kts
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: maven.yml
app/: build.gradle.kts
app/src/main/java/: module-info.java
app/src/main/resources/: log4j2.xml  logback.xml
application/: build.gradle.kts
application/src/main/java/: module-info.java
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/src/main/kotlin/: Config.kt  gir-launcher.java-application-conventions.gradle.kts  gir-launcher.java-common-conventions.gradle.kts  gir-launcher.java-library-conventions.gradle.kts
gradle/: libs.versions.toml
launcher-bootstrap/: .gitignore  Cargo.toml  pack.bat
launcher-bootstrap/src/: main.rs
launcher-core/: build.gradle.kts
launcher-core/src/main/java/: module-info.java
launcher-gui/: build.gradle.kts
launcher-gui/src/main/java/: module-info.java
lib/: build.gradle.kts
lib/src/main/java/: module-info.java
src/main/java/: log4j2.xml  module-info.java
src/main/java-templates/com/troblecodings/launcher/: GirBuildConfig.java
src/main/java/com/troblecodings/launcher/: CreditPage.java  ErrorDialog.java  ErrorPart.java  HomePage.java  LaunchSystem.java  Launcher.java  LauncherView.java  LoginPage.java  SettingsPage.java  UserService.java  Version.java  log4j2.xml
src/main/resources/: credits.css  log4j2.xml  logback.xml  microsoftlogin.css
(+222 files in other folders)
