[package]
name = "launcher-bootstrap"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
http = "1.3.1"
log = "0.4.28"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
tracing-subscriber = "0.3.20"
velopack = { version = "0.0.1298", features = [
    "file-logging",
    "log-panics",
    "simplelog",
    "time",
] }
